# myqt6app

./: .flake8  .gitignore  .isort.cfg  .pylintrc  CODE_STYLE.md  Makefile  README.md  debug_import.py  login_app.py  main_app_with_menu.py  pyproject.toml  pytest.ini  register_app.py  requirements.txt  run_tests.py  styles.qss  temp_pylintrc  test_camel.py  test_import_order.py  test_main_step_by_step.py  test_main_window.py  test_main_with_menu.py  test_qfluentwidgets.py  user_auth_app.py  watch_tests.py
.github/workflows/: ci.yml  test.yml
.trae/rules/: project_rules.md
data/: session.json
docs/: auto-import-sorting-guide.md  auto-testing-guide.md  cloudflare-python-worker-troubleshooting.md  d1-jsproxy-handling-guide.md  menu-design-guide.md  troubleshooting-summary.md  user-permission-system-design.md
docs/python/: examples.mdx  ffi.mdx  how-python-workers-work.mdx  index.mdx  stdlib.mdx
examples/: simple_example.py
legacy/: main_app_with_menu.py  worker_test_app.py
scripts/: README.md  legacy_start_app.py  manage_git_hooks.py  view_users.py  view_users.sh
src/: main.py
src/business/models/: user.py
src/business/services/: auth_service.py  (+2 more)
src/ui/: launcher.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  test_helpers.py
tests/integration/: __init__.py  test_qfluentwidgets.py  test_user_service.py
tests/ui/: __init__.py  test_main_window.py
tests/unit/: __init__.py  test_camel_case.py  test_user_repository.py
worker/: package.json  pnpm-lock.yaml  schema.sql  wrangler.toml
worker/src/: entry.py
(+18 files in other folders)
